add solution JavaSyntax task1507