@@ -15,11 +15,11 @@ public class Solution {
     public static void main(String[] args) throws IOException {
         Scanner scanner = new Scanner(System.in);
         String filename = scanner.nextLine();
-        InputStream inputStream = Files.newInputStream(Paths.get(filename));
-        InputStreamReader reader = new InputStreamReader(inputStream);
-        BufferedReader buff = new BufferedReader(reader);
-        System.out.println(inputStream);
-        System.out.println(buff);
+        List<String> list = Files.readAllLines(Path.of(filename));
+        for (int i = 0; i < list.size(); i = i + 2) {
+            System.out.println(list.get(i));
+        }
+
     }
 }
 
